Prevent fixed position sidebar from overlapping footer

--- a/src/app/category/category.css
+++ b/src/app/category/category.css
@@ -27,8 +27,22 @@
   padding-left: 2em;
 }
 
-.sidebarContent {
+#sidebarContent {
   position: fixed;
+  transform: translateY(0px);
+}
+
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #111;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+}
+
+.active .openbtn:hover {
+  background-color: #444;
 }
 
 .figure {
@@ -45,23 +59,11 @@
   display: none;
 }
 
-.openbtn {
-  font-size: 20px;
-  cursor: pointer;
-  background-color: #111;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-}
-
-.active .openbtn:hover {
-  background-color: #444;
-}
-
 .floater {
   /* position: fixed; */
   position: absolute;
   right: 5px;
+  width: 100%;
 }
 
 .placeholder {
